自定义刮刮卡

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,10 @@
         android:layout_height="match_parent"
         />
 
+    <!--<com.example.lenovo_g50_70.drawview.view.ScrapeView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"/>-->
+
     <!--<HorizontalScrollView-->
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="match_parent">-->
